--- a/Kube/cluster-ingress.yaml
+++ b/Kube/cluster-ingress.yaml
@@ -10,10 +10,10 @@ metadata:
 spec:
   tls:
   - hosts:
-    - sufian.eastus.cloudapp.azure.com
-    secretName: sufian-eastus-cloudapp-azure-com-staging
+    - aaksisfar.eastus2.cloudapp.azure.com
+    secretName: aksisfar-eastus2-cloudapp-azure-com-staging
   rules:
-  - host: sufian.eastus.cloudapp.azure.com
+  - host: aksisfar.eastus2.cloudapp.azure.com
     http:
       paths:
       - backend:
