--- a/Kube/dev/hello-node.yaml
+++ b/Kube/dev/hello-node.yaml
@@ -29,7 +29,7 @@ spec:
     spec:
       containers:
       - name: aks-hellonode
-        image: isfar2.azurecr.io/aks-helloworldnode:#{Release.Artifacts.aks.BuildNumber}#
+        image: aksisfar.azurecr.io/aks-helloworldnode:#{Release.Artifacts.aks.BuildNumber}#
         env:
         - name: ASPNETCORE_ENVIRONMENT
           value: "Development"        
@@ -78,7 +78,7 @@ spec:
     #- app-staging.informatiq.no
 #    secretName: app-staging-informatiq-no-cert-prod
   rules:
-  - host: isfar2.eastus.cloudapp.azure.com
+  - host: aksisfar.eastus.cloudapp.azure.com
     http:
       paths:           
       - path: /api/node
