--- a/Kube/dev/hello-node.yaml
+++ b/Kube/dev/hello-node.yaml
@@ -78,7 +78,7 @@ spec:
     #- app-staging.informatiq.no
 #    secretName: app-staging-informatiq-no-cert-prod
   rules:
-  - host: aksisfar.eastus.cloudapp.azure.com
+  - host: aksisfar.eastus2.cloudapp.azure.com
     http:
       paths:           
       - path: /api/node
