--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,7 +19,9 @@ steps:
 
 - script: |
     echo "$(dockerPassword)" | docker login  $(dockerId).azurecr.io -u $(dockerUsername) --password-stdin
+    docker push $(dockerId).azurecr.io/aks-helloworld:$(VERSION)
     docker push $(dockerId).azurecr.io/aks-helloworldnode:$(VERSION)
+    docker push $(dockerId).azurecr.io/aks-web:$(VERSION)    
   displayName: "docker publish"
   
 - task: CopyFiles@2
