--- a/Kube/dev/hello-node.yaml
+++ b/Kube/dev/hello-node.yaml
@@ -70,13 +70,13 @@ metadata:
   annotations:
     kubernetes.io/ingress.class: nginx    
     nginx.org/server-snippets: "gzip on;"
-#    cert-manager.io/cluster-issuer: letsencrypt-prod    
-#    nginx.ingress.kubernetes.io/ssl-redirect: "true"    
+    cert-manager.io/cluster-issuer: letsencrypt-prod    
+    nginx.ingress.kubernetes.io/ssl-redirect: "true"    
 spec:  
-#  tls:
-#  - hosts:
-    #- app-staging.informatiq.no
-#    secretName: app-staging-informatiq-no-cert-prod
+  tls:
+  - hosts:
+    - aksisfar.eastus2.cloudapp.azure.com
+    secretName: aksisfar-eastus2-cloudapp-azure-com-staging
   rules:
   - host: aksisfar.eastus2.cloudapp.azure.com
     http:
